--- a/camera-integration/requirements.txt
+++ b/camera-integration/requirements.txt
@@ -1,3 +1,6 @@
-cachetools
-picamera2
-requests-toolbelt
+cachetools==5.3.0
+msal==1.18.0
+picamera2==0.3.9
+Requests==2.30.0
+requests_toolbelt==1.0.0
+RPi.GPIO==0.7.1
